Improved examples Fixed error: object-curly-even-spacing for react import in index.js

--- a/source/App/_App.scss
+++ b/source/App/_App.scss
@@ -1,15 +1,3 @@
-body {
-  padding: 0;
-  margin: 0;
-}
-
-#app {
-  // display: flex;
-  // flex-flow: row nowrap;
-  height: 100vh;
-  width: 100vw;
-}
-
 :global {
   html {
     height: 100%;
@@ -19,34 +7,41 @@ body {
     font-family: ubuntu, sans;
     font-size: 12px;
     height: 100%;
-  }
-
-  .notransition * {
-    transition: none !important;
-  }
-
-  * {
-    user-select: none;
-    cursor: default;
+    padding: 0;
+    margin: 0;
   }
 }
 
-.text-toggle {
-  background: #BBB;
-  // color: white;
-  border-radius: 2px;
-  // border: 1px solid darken($color: #777, $amount: 10%);
-  border: 1px inset #777;
-  width: 50px;
-  height: 1.5em;
+#app {
+  height: 100vh;
+  width: 100vw;
+}
+
+.examples {
+  width: 70&;
+  text-align: center;
+  padding: 35px;
+}
+
+.examples h2 {
+  color: #DDD;
+  display: inline;
+}
+
+.examples * {
   vertical-align: middle;
-  font-size: 1em;
-  margin: 0;
-  padding: 0;
 }
-.text-toggle div:first-of-type {
-  background: skyblue;
+
+.light {
+  background: white;
 }
-.text-toggle div:last-of-type {
-  background: wheat;
+
+.dark {
+  background: #333;
+}
+.dark h2 {
+  color: #DDD;
+}
+.light h2 {
+  color: #333;
 }
